--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       background: linear-gradient(to right, #920853, #985a9e);
-      height: 100vh;
+      height: 90vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -26,6 +26,7 @@
       height: 220px;
       transform-style: preserve-3d;
       animation: rotate 25s linear infinite;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     }
 
     @keyframes rotate {
@@ -44,7 +45,7 @@
 
     .slider span {
       position: absolute;
-      top: 0;
+      top: 75px;
       left: 0;
       width: 100%;
       height: 100%;
@@ -54,9 +55,7 @@
     }
 
     .slider span img {
-      position: absolute;
-      top: 0;
-      left: 0;
+      position: relative;
       width: 100%;
       height: 100%;
       border-radius: 20px;
@@ -67,21 +66,72 @@
     .slider span:hover img {
       transform: translateY(-50px) scale(1.2);
     }
+
+    .heading {
+      font-size: 40px;
+      font-family: 'Papyrus', sans-serif;
+      letter-spacing: 5px;
+      word-spacing: 12px;
+      text-transform: uppercase;
+      color: rgb(238, 238, 238);
+      text-align: center;
+      position: absolute;
+      top: 200px;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+      width: 1400px;
+      /* Need a specific value to work */
+    }
   </style>
   <title>To Ada</title>
 </head>
 
 <body>
-  <div class="slider" id="imageSlider">
-    <span style="--i:1;"><img src="images/1.jpg" alt=""></span>
-    <span style="--i:2;"><img src="images/2.jpg" alt=""></span>
-    <span style="--i:3;"><img src="images/3.jpg" alt=""></span>
-    <span style="--i:4;"><img src="images/4.jpg" alt=""></span>
-    <span style="--i:5;"><img src="images/5.jpg" alt=""></span>
-    <span style="--i:6;"><img src="images/6.jpg" alt=""></span>
-    <span style="--i:7;"><img src="images/7.jpg" alt=""></span>
-    <span style="--i:8;"><img src="images/8.jpg" alt=""></span>
+
+  <div id="outsideHoursMessage">
+    记得过了 0 点再回来看哦！</div>
+
+
+  <!-- <div class="heading">🎂 Happy Birthday, Ada! 🎉</div> -->
+  <div id="normalContent">
+    <div class="heading">🎂 Happy Birthday! lil lil Ada! 🎉</div>
+    <div class="slider" id="imageSlider">
+      <span style="--i:1;"><img src="images/1.jpg" alt=""></span>
+      <span style="--i:2;"><img src="images/2.jpg" alt=""></span>
+      <span style="--i:3;"><img src="images/3.jpg" alt=""></span>
+      <span style="--i:4;"><img src="images/4.jpg" alt=""></span>
+      <span style="--i:5;"><img src="images/5.jpg" alt=""></span>
+      <span style="--i:6;"><img src="images/6.jpg" alt=""></span>
+      <span style="--i:7;"><img src="images/7.jpg" alt=""></span>
+      <span style="--i:8;"><img src="images/8.jpg" alt=""></span>
+    </div>
   </div>
+
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Get the current date and time
+      var now = new Date();
+      var currentHour = now.getHours();
+
+      // Set the allowed time range (0:00 am to 1:00 am)
+      var startTime = 0;
+      var endTime = 23;
+
+      // Check if the current hour is within the allowed time range
+      if (currentHour >= startTime && currentHour < endTime) {
+        // If within the time range, display the content
+        document.getElementById('normalContent').style.display = 'block';
+        document.getElementById('outsideHoursMessage').style.display = 'none';
+      } else {
+        // If outside the time range, display a message
+        document.getElementById('normalContent').style.display = 'none';
+        document.getElementById('outsideHoursMessage').style.display = 'block';
+      }
+    });
+  </script>
 
 </body>
 
